Refactor configuration of virtual threads
This change tries to harmonize how virtual threads are configured for executors and thread factories, and ensures that executors/thread factories do not change for a running cache manager.